# CMakePractice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: Matrix.hpp  Vec.hpp
src/: main.cc
src/app/: cppaidemo.cc
src/lib/: Matrix.cc
